@@ -2,6 +2,9 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+Jul 01 2016 (bgol, horizon branch):
+. Update EDAPI plugin to version 3.6.3
+
 Jun 28 2016 (bgol, horizon branch):
 . (maddavo) Renamed item "Low Temperature Diamond" to "Low Temperature Diamonds"
 . added EDSM utils (implemented issue #1)
